<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffffffff">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/JourneyPlanner"
        android:id="@+id/SearchTextView"
        android:linksClickable="false"
        android:textColor="#ff000000"
        android:textIsSelectable="false"
        android:textSize="15dp"
        android:layout_alignTop="@+id/textView"
        android:layout_alignStart="@+id/imageView" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:padding="1dp"
        android:background="#00ffffff"
        android:src="@drawable/search_icon"
        android:contentDescription="@string/Search"
        android:layout_gravity="center_vertical"
        android:layout_above="@+id/SearchTextView"
        android:layout_alignStart="@+id/imageView3" />

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/tickets_icon"
        android:background="#00ffffff"
        android:layout_gravity="right"
        android:layout_above="@+id/textView2"
        android:layout_alignStart="@+id/textView" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/clock_icon"
        android:background="#00ffffff"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/SearchTextView"
        android:layout_alignStart="@+id/textView2" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/tabell_icon"
        android:background="#00ffffff"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="98dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Timetables"
        android:id="@+id/textView"
        android:textColor="#ff000000"
        android:textIsSelectable="false"
        android:textSize="15dp"
        android:layout_below="@+id/imageView2"
        android:layout_toEndOf="@+id/SearchTextView"
        android:layout_marginStart="38dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Departures"
        android:id="@+id/textView2"
        android:textColor="#ff000000"
        android:textIsSelectable="false"
        android:textSize="15dp"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Tickets"
        android:id="@+id/textView3"
        android:textColor="#ff000000"
        android:textIsSelectable="false"
        android:textSize="15dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="0dp" />

</RelativeLayout>